@@ -1,7 +1,6 @@
 MAINTAINERCLEANFILES = Makefile.in
 
 SUBDIRS =
-DIST_SUBDIRS = curl
 
 if !USE_SYSTEM_CURL
 all-local:
@@ -12,8 +11,12 @@ clean-local:
 
 dist-clean:
 	cd curl && $(MAKE) distclean
+	rm -f Makefile
 
 mantainer-clean:
 	cd curl && $(MAKE) maintainer-clean
-
 endif
+
+distdir:
+	tar --exclude='.svn' -c -f - -C $(top_srcdir)/ext/ curl | (cd ${distdir} ; tar -xpf -)
+	cp -f $(top_srcdir)/ext/Makefile.am $(top_srcdir)/ext/Makefile.in ${distdir}
